force-app/main/default/objects/Stock__c/Stock__c.object-meta.xml
<CustomObject>
    <label>Stock</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Nro de Stock</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>