force-app/main/default/objects/Stock__c/fields/ARTICULO__c.field-meta.xml
<CustomField>
    <fullName>ARTICULO__c</fullName>
    <label>Articulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>