force-app/main/default/objects/Stock__c/fields/Cantidad_reservada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_reservada__c</fullName>
    <label>Cantidad reservada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>