force-app/main/default/objects/Stock__c/fields/CANTIDAD_UOM_PRIMARIA__c.field-meta.xml
<CustomField>
    <fullName>CANTIDAD_UOM_PRIMARIA__c</fullName>
    <label>Cantidad UOM primaria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>