force-app/main/default/objects/Stock__c/fields/CODIGO_DEPOSITO__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_DEPOSITO__c</fullName>
    <label>Código de depósito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>