force-app/main/default/objects/Stock__c/fields/COSTO_UNITARIO__c.field-meta.xml
<CustomField>
    <fullName>COSTO_UNITARIO__c</fullName>
    <label>Costo unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>