force-app/main/default/objects/Stock__c/fields/DESCRIPCION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPCION__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>