force-app/main/default/objects/Stock__c/fields/ESTADO__c.field-meta.xml
<CustomField>
    <fullName>ESTADO__c</fullName>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>