force-app/main/default/objects/Stock__c/fields/FECHA_DE_VENCIMIENTO__c.field-meta.xml
<CustomField>
    <fullName>FECHA_DE_VENCIMIENTO__c</fullName>
    <label>Fecha de vencimiento</label>
    <type>Date</type>
</CustomField>