force-app/main/default/objects/Stock__c/fields/LOTE__c.field-meta.xml
<CustomField>
    <fullName>LOTE__c</fullName>
    <label>Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>