force-app/main/default/objects/Stock__c/fields/MONTO__c.field-meta.xml
<CustomField>
    <fullName>MONTO__c</fullName>
    <label>Monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>