force-app/main/default/objects/Stock__c/fields/NOMBRE_DEPOSITO__c.field-meta.xml
<CustomField>
    <fullName>NOMBRE_DEPOSITO__c</fullName>
    <label>Nombre de depósito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>