force-app/main/default/objects/Stock__c/fields/ORGANIZACION__c.field-meta.xml
<CustomField>
    <fullName>ORGANIZACION__c</fullName>
    <label>Organización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>