force-app/main/default/objects/Stock__c/fields/Pedidos_pendientes__c.field-meta.xml
<CustomField>
    <fullName>Pedidos_pendientes__c</fullName>
    <label>Pedidos pendientes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>