force-app/main/default/objects/Stock__c/fields/SUBINVENTARIO_LOCALIZACION__c.field-meta.xml
<CustomField>
    <fullName>SUBINVENTARIO_LOCALIZACION__c</fullName>
    <label>Subinventario/Localización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>