force-app/main/default/objects/Stock__c/fields/SUBLOTE__c.field-meta.xml
<CustomField>
    <fullName>SUBLOTE__c</fullName>
    <label>Sublote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>