force-app/main/default/objects/Stock__c/fields/UOM_PRIMARIA__c.field-meta.xml
<CustomField>
    <fullName>UOM_PRIMARIA__c</fullName>
    <label>UOM primaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>