force-app/main/default/objects/Stock__c/fields/UOM_SECUDARIA__c.field-meta.xml
<CustomField>
    <fullName>UOM_SECUDARIA__c</fullName>
    <label>UOM secundaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>